<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/_3sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="174dp"
        android:layout_height="match_parent">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imagePoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="H, 2:1.6"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius="10dp"
            tools:src="@drawable/one" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/duyen_ma"
            android:textColor="@color/primary_label"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imagePoster" />

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/comedy_horrified"
            android:textColor="@color/secondary_label"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <TextView
            android:id="@+id/textReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/august_12_2022"
            android:textColor="@color/secondary_label"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintTop_toBottomOf="@+id/textCategory" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/rating"
            android:paddingBottom="@dimen/_4sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textReleaseDate"
            tools:rating="4.5f" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>