<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".ListMovieActivity">

    <TextView
        android:id="@+id/tv_List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/danh_s_ch_phim"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#605E5E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phimdachieu"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/phim_chi_u"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_xemthemdachieu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="end"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:text="@string/xem_th_m"
            android:textColor="@color/secondary_label"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/spiderman" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:background="@drawable/one" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phimdangchieu"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/xem_th_m"
            android:textColor="@color/primary_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_xemthemdangchieu"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="end"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:text="@string/xem_th_m"
            android:textColor="@color/secondary_label"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/residenevil" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:background="@drawable/four" />
    </LinearLayout>

</LinearLayout>